Create feature to get all menu items from frontend Create functions to retrieve all menu items for logged in users and admin Create functions to retrieve recently added menu items [Finishes #161200716]

--- a/app/public/admin/all-food-items.html
+++ b/app/public/admin/all-food-items.html
@@ -77,168 +77,11 @@
       <h2 class="text-center">All menu items</h2>
       <hr>
       <div class="meals">
-        <h2>Pasteries</h2>
-        <hr>
-        <div class="flex-container">
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-1.jpg" alt="pastery" />
-              </div>
-
-              <div class="item-details">
-                <h5>#1230</h5>
-                <h3>Traditional French dessert</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-2.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1220</h5>
-                <h3>Sweet italian pastery</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-3.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1250</h5>
-                <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-4.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1270</h5>
-                <h3>Freshly Baked Sausages</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
+        <!--Div for generated food items starts here-->
+        <div id="admin-output">
 
         </div>
-        <h2>Drinks</h2>
-        <hr>
-        <div class="flex-container">
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-1.jpg" alt="pastery" />
-              </div>
 
-              <div class="item-details">
-                <h5>#1270</h5>
-                <h3>Coffee</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-2.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1330</h5>
-                <h3>Latte</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-3.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1340</h5>
-                <h3>Clean Clear Water</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="white-text green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-4.jpg" alt="pastery" />
-              </div>
-              <div class="item-details">
-                <h5>#1430</h5>
-                <h3>Cuba Libre cocktail</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="green-bg">
-                <a href="edit-food-items.html" class="white-text">Edit</a>
-              </button>
-              <button class="red-bg-colour">
-                <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
-              </button>
-            </div>
-          </div>
-
-
-        </div>
         <div class="text-center">
           <button class="blue-bg-colour white-text">
             <a>Show more items</a>
@@ -260,6 +103,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
+  <script type="text/javascript" src="../fetch/menu.js"></script>
   <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
