--- a/app/public/all-food-items.html
+++ b/app/public/all-food-items.html
@@ -42,138 +42,11 @@
       <h2 class="text-center">All menu items</h2>
       <hr>
       <div class="meals">
-        <h2>Pasteries</h2>
-        <hr>
-        <!--Flex container for food item display starts here-->
-        <div class="flex-container">
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-1.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Traditional French dessert</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-2.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Sweet italian pastery</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-3.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-4.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Freshly Baked Sausages</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-
-            </div>
-          </div>
-
-          <!--Flex container for food item display ends here-->
-        </div>
-        <h2>Drinks</h2>
-        <hr>
-        <div class="flex-container">
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-1.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Coffee</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-2.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Latte</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-3.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Clean Clear Water</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-4.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Cuba Libre cocktail</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-              </div>
-              <button class="blue-bg-colour">
-                <a href="login.html" class="white-text">Add to cart</a>
-              </button>
-            </div>
-          </div>
+        <!--Div for generated food items starts here-->
+        <div id="output">
 
         </div>
+
         <div class="text-center">
           <button class="blue-bg-colour white-text">
             <a>Show more items</a>
@@ -193,6 +66,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript" src="./fetch/menu.js"></script>
 </body>
 
 </html>
