--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
-  <link rel="stylesheet" href="./assets/css/cart.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home ¦ Fast-Food-Fast</title>
 </head>
@@ -63,70 +62,11 @@
       <div class="meals">
         <h2>Recently Added </h2>
         <hr>
-        <div class="flex-container">
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-1.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Vegan burger buckwheat</h3>
-                <p><span class="price-figure">&#8358;1,500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to Cart</a>
-              </button>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-2.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Chicken Shawarma</h3>
-                <p><span class="price-figure">&#8358;1,500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to Cart</a>
-              </button>
-
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-3.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Ham Sandwiches</h3>
-                <p><span class="price-figure">&#8358;1,500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to Cart</a>
-              </button>
-
-            </div>
-          </div>
-          <div class="item">
-            <div class="item-container">
-              <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-4.jpg" />
-              </div>
-              <div class="item-details">
-                <h3>Ata-Rodo Pizza</h3>
-                <p><span class="price-figure">&#8358;1,500</span></p>
-              </div>
-              <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Add to Cart</a>
-              </button>
-
-            </div>
-          </div>
+        <!--Div for generated food items starts here-->
+        <div id="latest-output">
 
         </div>
+
         <div class="text-center">
           <button class="blue-bg-colour white-text">
             <a href="all-food-items.html">Show more items</a>
@@ -146,6 +86,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript" src="fetch/menu.js"></script>
 </body>
 
 </html>
