Create feature for users to login from the frontend Create functions to log a user in and out of the app Replace static content in HTML files with dynamically generated divs [Finishes #161207871]

--- a/app/public/admin/delete-food-successful.html
+++ b/app/public/admin/delete-food-successful.html
@@ -37,12 +37,12 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Howdy, Admin
+        <button class="dropbtn">Howdy, <span id="username"></span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href="admin-account.html">My Account</a>
-          <a href="login.html">Logout</a>
+          <a id="logout">Logout</a>
         </div>
       </div>
       <a id="nav-icon" class="icon">&#9776;</a>
@@ -76,6 +76,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../fetch/userPage.js"></script>
 </body>
 
 </html>
