--- a/app/public/admin/all-orders.html
+++ b/app/public/admin/all-orders.html
@@ -37,12 +37,12 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Howdy, Admin
+        <button class="dropbtn">Howdy, <span id="username"></span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href="admin-account.html">My Account</a>
-          <a href="login.html">Logout</a>
+          <a id="logout">Logout</a>
         </div>
       </div>
       <a id="nav-icon" class="icon">&#9776;</a>
@@ -162,6 +162,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
+  <script type="text/jsvascript" src="../fetch/userPage.js"></script>
 </body>
 
 </html>
