--- a/app/public/login.html
+++ b/app/public/login.html
@@ -31,19 +31,20 @@
             <form id="user-login">
               <div>
                 <p class="">Email</p>
-                <input type="email" class="textbox" required placeholder="Enter email here..." />
+                <input type="email" class="textbox" id="email" required placeholder="Enter email here..." />
               </div>
               <div>
                 <p class="">Password</p>
-                <input type="password" class="textbox" required placeholder="Enter password here..." />
+                <input type="password" id="password" class="textbox" required placeholder="Enter password here..." />
               </div>
               <p>
                 <a href="forgotpassword.html" class="">forgot password?</a>
               </p>
               <br/>
               <div class="">
-                <button type="submit" class="btn blue-bg-colour white-text">Login</button>
+                <button type="submit" id="submit-login" class="btn blue-bg-colour white-text">Login</button>
               </div>
+              <span id="error"></span>
               <br/>
               <div class="">
                 <a href="signup.html" class="">Don't have an account? Sign Up</a>
@@ -66,6 +67,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript" src="./fetch/login.js"></script>
   <script type="text/javascript" src="./assets/js/redirect.js"></script>
 </body>
 
