--- a/app/public/users/cancel-order-successful.html
+++ b/app/public/users/cancel-order-successful.html
@@ -27,12 +27,12 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Howdy, Lebagerian
+        <button class="dropbtn">Howdy, <span id="username"></span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href="my-account.html">My Account</a>
-          <a href="../login.html">Logout</a>
+          <a id="logout">Logout</a>
         </div>
       </div>
       <div class="dropdown profile">
@@ -81,6 +81,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript" src="../fetch/userPage.js"></script>
 </body>
 
 </html>
