--- a/app/public/users/my-account.html
+++ b/app/public/users/my-account.html
@@ -27,12 +27,12 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Howdy, Lebagerian
+        <button class="dropbtn">Howdy, <span id="username"></span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href="my-account.html">My Account</a>
-          <a href="../login.html">Logout</a>
+          <a id="logout">Logout</a>
         </div>
       </div>
       <div class="dropdown profile">
