--- a/app/public/users/pending-orders.html
+++ b/app/public/users/pending-orders.html
@@ -49,12 +49,12 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Howdy, Lebagerian
+        <button class="dropbtn">Howdy, <span id="username"></span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href="my-account.html">My Account</a>
-          <a href="../login.html">Logout</a>
+          <a id="logout">Logout</a>
         </div>
       </div>
       <div class="dropdown profile">
@@ -176,6 +176,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
+  <script type="text/javascript" src="../fetch/userPage.js"></script>
   <script type="text/javascript" src="../assets/js/redirect.js"></script>
 
 </body>
