--- a/app/public/users/my-account.html
+++ b/app/public/users/my-account.html
@@ -95,6 +95,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../fetch/userPage.js"></script>
 </body>
 
 </html>
