Create feature for admin to get a specific order Create a function to retrieve a specific order from the orders list Replace static content in HTML file with dynamically generated content [Finishes #161231729]

--- a/app/public/admin/view-order.html
+++ b/app/public/admin/view-order.html
@@ -81,19 +81,8 @@
         <div class="img-container">
           <img class="" src="../assets/images/item-2.jpg" alt="pastery" />
         </div>
-        <div class="order-details">
-          <p><b>#1120</b> - 12-08-2018 12:09:00</p>
-          <h3>Shawarma and Sauce</h3>
-          <p>Price: <span class="price-figure">&#8358;1500</span></p>
-          <p>Quantity: 4</p>
-          <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
-          <h5>Order by: Bruce Banner</h5>
-          <button class="green-bg white-text">
-            <a href="accept-order-successful.html" class="white-text">Accept</a>
-          </button>
-          <button class="red-bg-colour white-text">
-            <a onclick="modalPopup()" class="white-text">Decline</a>
-          </button>
+        <div id="specific-order">
+
         </div>
         <br>
         <div>
@@ -115,6 +104,7 @@
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></script>
+  <script type="text/javascript" src="../fetch/orders.js"></script>
   <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
