--- a/app/public/admin/processed-orders.html
+++ b/app/public/admin/processed-orders.html
@@ -84,35 +84,8 @@
             <button class="blue-bg-colour white-text">Filter</button>
           </div>
           <!--Table for orders starts here-->
-          <table>
-            <tr>
-              <th>Order ID</th>
-              <th>Customer's name</th>
-              <th>Total Amount Paid</th>
-              <th>Items</th>
-              <th>Status</th>
-              <th>Manage</th>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td class="text-wrap">Bruce Banner</td>
-              <td>&#8358;6000</td>
-              <td><a href="#">View items</a></td>
-              <td class="text-wrap">in progress...</td>
-              <td>
-                <a onclick="modalPopup()">Mark as Complete</a>
-              </td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td class="text-wrap">Robert Downey</td>
-              <td>&#8358;6000</td>
-              <td><a href="#">View items</a></td>
-              <td class="text-wrap">in progress...</td>
-              <td>
-                <a onclick="modalPopup()">Mark as Complete</a>
-              </td>
-            </tr>
+          <table id="accepted-order-output">
+
           </table>
           <!--Table for orders ends here-->
           <div class="container">
@@ -140,6 +113,7 @@
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></script>
+  <script type="text/javascript" src="../fetch/orders.js"></script>
   <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
