Create cart functionality Create function to add selected menu items to a cart Create fucntion to count cart items to display to the user Create function to load cart items on the checkout page

--- a/app/public/users/all-food-items.html
+++ b/app/public/users/all-food-items.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Cart items (0)
+        <button class="dropbtn">Cart items (<span id="cart-count"></span>)
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -61,7 +61,7 @@
       <hr>
       <div class="meals">
         <!--Div for generated food items starts here-->
-        <div id="user-output">
+        <div class="flex-container" id="user-output">
 
         </div>
 
