Finish up cart functionality feature Create function to remove item from cart create function to calculate and load total amount of cart items [Finishes #161468824]

--- a/app/public/users/all-food-items.html
+++ b/app/public/users/all-food-items.html
@@ -41,7 +41,7 @@
         </button>
         <div class="dropdown-content">
           <div class="cart-body">
-            Your cart is empty
+            <span id="cart-text">Your cart is empty</span>
             <br>
             <button class="blue-bg-colour white-text cart-btn">
               <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
