--- a/app/public/users/confirm-order.html
+++ b/app/public/users/confirm-order.html
@@ -40,7 +40,7 @@
         </button>
         <div class="dropdown-content">
           <div class="cart-body">
-            Your cart is empty
+            <span id="cart-text">Your cart is empty</span>
             <br>
             <button class="blue-bg-colour white-text cart-btn">
               <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="text-center">
-        <h3>Total: &#8358;1500</h3>
+        <h3>Total: &#8358;<span id="total-amount"></span></h3>
         <button class="blue-bg-colour white-text">
           <a href="order-successful.html">Confirm Order</a>
         </button>
