--- a/app/public/users/order-history.html
+++ b/app/public/users/order-history.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Cart items (0)
+        <button class="dropbtn">Cart items (<span id="cart-count"></span>)
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -92,6 +92,7 @@
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></script>
   <script type="text/javascript" src="../fetch/orders.js"></script>
+  <script type="text/javascript" src="../fetch/cartCount.js"></script>
 </body>
 
 </html>
