--- a/app/public/users/order-successful.html
+++ b/app/public/users/order-successful.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="dropdown profile">
-        <button class="dropbtn">Cart items (0)
+        <button class="dropbtn">Cart items (<span id="cart-count"></span>)
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -81,6 +81,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></Script>
+  <script type="text/javascript" src="../fetch/cartCount.js"></script>
 </body>
 
 </html>
