Create new API endpoint to get all categories Write test suite for new API endpoint Create route and controller for new API endpoint

--- a/app/public/admin/add-food.html
+++ b/app/public/admin/add-food.html
@@ -53,7 +53,7 @@
   <main>
     <section class="box-section">
       <div class="box-container">
-        <div class="innerbox-container">
+        <div class="innerbox-container" id="add-food-div">
           <div class="form">
             <h2>Add new food</h2>
             <form id="add-food-form">
@@ -71,7 +71,7 @@
               </div>
               <div>
                 <p class="">Category</p>
-                <select class="textbox" required>
+                <select class="textbox" id="category-list" required>
                   <option>Pasteries</option>
                   <option>Breakfast</option>
                   <option>Drinks</option>
@@ -116,6 +116,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></script>
+  <script type="text/javascript" src="../fetch/menu.js"></script>
   <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
