--- a/app/public/all-food-items.html
+++ b/app/public/all-food-items.html
@@ -18,7 +18,7 @@
       <a href="all-food-items.html">View Menu</a>
       <a href="login.html" class="profile">Sign in</a>
       <div class="dropdown profile">
-        <button class="dropbtn">Cart items (0)
+        <button class="dropbtn">Cart items (<span id="cart-count"></span>)
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -26,7 +26,7 @@
             Your cart is empty
             <br>
             <button class="blue-bg-colour white-text cart-btn">
-              <a href="login.html" class="white-text">Proceed to checkout</a>
+              <a href="login.html" class="white-text">Sign up to order</a>
             </button>
           </div>
         </div>
@@ -43,7 +43,7 @@
       <hr>
       <div class="meals">
         <!--Div for generated food items starts here-->
-        <div id="output">
+        <div class="flex-container" id="menu-output">
 
         </div>
 
