Create feature for admin user to add a new menu item Write function to add new food item Adjust static pages to work with dynamically generated content [Finishes #161231450]

--- a/app/public/admin/all-food-items.html
+++ b/app/public/admin/all-food-items.html
@@ -78,7 +78,7 @@
       <hr>
       <div class="meals">
         <!--Div for generated food items starts here-->
-        <div id="admin-output">
+        <div class="flex-container" id="admin-output">
 
         </div>
 
