--- a/app/public/all-food-items.html
+++ b/app/public/all-food-items.html
@@ -26,7 +26,7 @@
             Your cart is empty
             <br>
             <button class="blue-bg-colour white-text cart-btn">
-              <a href="login.html" class="white-text">Sign up to order</a>
+              <a href="login.html" class="white-text">login to order</a>
             </button>
           </div>
         </div>
