--- a/app/public/admin/add-food.html
+++ b/app/public/admin/add-food.html
@@ -59,27 +59,28 @@
             <form id="add-food-form">
               <div>
                 <p class="">Name of food</p>
-                <input type="text" class="textbox" required placeholder="Enter the food name here..." />
+                <input type="text" class="textbox" id="food-name" required placeholder="Enter the food name here..." />
               </div>
               <div>
                 <p class="">Price</p>
-                <input type="text" class="textbox" required placeholder="Enter price of food here..." />
+                <input type="number" class="textbox" min="0" id="food-price" required placeholder="Enter price of food here..."/>
               </div>
               <div>
-                <p class="">Item Image</p>
-                <input type="file" class="textbox" required placeholder="Upload food image here..." />
+                <p class="">Image URL</p>
+                <input type="text" class="textbox" id="food-image" required placeholder="Enter URL of the image here (e.g. http://pixabay.com/food.jpg" />
               </div>
               <div>
                 <p class="">Category</p>
                 <select class="textbox" id="category-list" required>
-                  <option>Pasteries</option>
-                  <option>Breakfast</option>
-                  <option>Drinks</option>
                 </select>
+              </div>
+              <div>
+                <p class="">Description</p>
+                <textarea class="textbox" id="food-description" required></textarea>
               </div>
               <br/>
               <div class="">
-                <button type="submit" class="btn blue-bg-colour white-text">Add food</button>
+                <button type="submit" id="btn-add-food" class="btn blue-bg-colour white-text">Add food</button>
               </div>
 
             </form>
@@ -89,22 +90,6 @@
     </section>
   </main>
   <!-- Main content Ends -->
-
-  <!-- Modal Starts -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <div class="container text-center">
-        <h1 class="red-text">Meal Added Successfully</h1>
-        <div class="">
-          <img src="../assets/images/thumbs.png" alt="success" class="img-responsive" />
-        </div>
-        <a href="all-food-items.html" class="">
-          << Back to Menu items</a>
-      </div>
-    </div>
-  </div>
-  <!-- Modal Ends -->
-
 
   <footer>
     <div class="blue-bg-colour">
@@ -117,7 +102,6 @@
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../fetch/userPage.js"></script>
   <script type="text/javascript" src="../fetch/menu.js"></script>
-  <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
 </html>
