Create feature for admin to edit menu item Write function to load selected menu item details Write function to edit the selected menu item Update edit page for easy item update [Finishes #161702584]

--- a/app/public/admin/add-food.html
+++ b/app/public/admin/add-food.html
@@ -67,7 +67,7 @@
               </div>
               <div>
                 <p class="">Image URL</p>
-                <input type="text" class="textbox" id="food-image" required placeholder="Enter URL of the image here (e.g. http://pixabay.com/food.jpg" />
+                <input type="text" class="textbox" id="food-image" required placeholder="Enter URL of the image here (e.g. http://pixabay.com/food.jpg)" />
               </div>
               <div>
                 <p class="">Category</p>
