Create feature for admin to delete menu item Write function for admin user to be able to delete a selected menu item [Finishes #161702591]

--- a/app/public/users/order-history.html
+++ b/app/public/users/order-history.html
@@ -68,10 +68,8 @@
         <button class="blue-bg-colour white-text">Filter</button>
 
         <!--Flex container for food item display starts here-->
-        <div class="flex-container">
-          <div id="order-history-output">
+        <div class="flex-container" id="order-history-output">
 
-          </div>
         </div>
         <!--Flex container for food item display ends here-->
       </div>
