Create feature for users to place order Write fucntion to post a new order by a customer Update cart objects to align with required fields for posting a new order [Finishes #161705053]

--- a/app/public/users/confirm-order.html
+++ b/app/public/users/confirm-order.html
@@ -125,7 +125,7 @@
       <div class="text-center">
         <h3>Total: &#8358;<span id="total-amount"></span></h3>
         <button class="blue-bg-colour white-text">
-          <a href="order-successful.html">Confirm Order</a>
+          <a id="place-order">Confirm Order</a>
         </button>
         <div>
           <a href="all-food-items.html" class=""> << Back to Menu items</a>
